# OOP3

./: CMakeLists.txt
include/: Figures.h
src/: CMakeLists.txt  Figures.cpp  main.cpp
tests/: CMakeLists.txt  Figures_tests.cpp
